--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -388,6 +388,50 @@
               </div>
 
             </div>
+            
+            <div class="block b-add-block__last">
+              <h4>Последние просмотренные</h4>
+              <div class="b-ad__item item">
+                <div class="b-ad__item-img">
+                  <figure>
+                    <img src="img/temp/auto/6.jpg" alt="">
+                  </figure>
+                </div>
+                <div class="b-ad__item-info">
+                  <div class="b-ad__item-info-top">
+                    <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                  </div>
+                </div>
+              </div>
+
+              <div class="b-ad__item item">
+                <div class="b-ad__item-img">
+                  <figure>
+                    <img src="img/temp/auto/2.jpg" alt="">
+                  </figure>
+                </div>
+                <div class="b-ad__item-info">
+                  <div class="b-ad__item-info-top">
+                    <h5 data-clamp><a href="one-ad-page.html">Deleniti assumenda inventore mollitia. Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? </a></h5>
+                  </div>
+                </div>
+              </div>
+
+              <div class="b-ad__item item">
+                <div class="b-ad__item-img">
+                  <figure>
+                    <img src="img/temp/auto/10.jpg" alt="">
+                  </figure>
+                </div>
+                <div class="b-ad__item-info">
+                  <div class="b-ad__item-info-top">
+                    <h5 data-clamp><a href="one-ad-page.html">Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+            
           </section>
 
           <section class="l-filter col xs-3">
@@ -448,9 +492,6 @@
 
                     <p class="icon-search"><input type="submit" value="Найти" class="button middle tab-input"></p>
                   </form>
-                  <p>
-                    <a href='flea-market.html' class="b-contact__other-ad text bold" title="Последние просмотренные обьявления">Последние просмотренные</a>
-                  </p>
 
                 </div>
               </div>
