--- a/www/one-company-page.html
+++ b/www/one-company-page.html
@@ -181,7 +181,9 @@
               <div class="b-one-company__news-wrapp container">
 
                 <div class="b-one-company__news-wrapp-item">
-                  <img src="img/temp/auto/9.png" alt="">
+                  <a href="one-item-news.html">
+                    <img src="img/temp/auto/9.png" alt="">
+                  </a>
                   <div class="b-one-company__news-wrapp-item-text">
                     <p class="b-one-company__news-wrapp-item-text-date text">12.10.2016</p>
                     <h5 data-clamp><a href="one-item-news.html" data-clamp>Новость 1</a></h5>
@@ -195,7 +197,9 @@
                 </div>
 
                 <div class="b-one-company__news-wrapp-item">
-                  <img src="img/temp/auto/8.png" alt="">
+                  <a href="one-item-news.html">
+                    <img src="img/temp/auto/8.png" alt="">
+                  </a>
                   <div class="b-one-company__news-wrapp-item-text">
                     <p class="b-one-company__news-wrapp-item-text-date text">12.10.2016</p>
                     <h5 data-clamp><a href="one-item-news.html">Новость 2</a></h5>
@@ -208,7 +212,9 @@
                 </div>
 
                 <div class="b-one-company__news-wrapp-item">
-                  <img src="img/temp/auto/7.png" alt="">
+                  <a href="one-item-news.html">
+                    <img src="img/temp/auto/7.png" alt="">
+                  </a>
                   <div class="b-one-company__news-wrapp-item-text">
                     <p class="b-one-company__news-wrapp-item-text-date text">12.10.2016</p>
                     <h5 data-clamp><a href="one-item-news.html">Новость 3 em ipsum dolor sit amet, consectetur adipisicing elit. Dicta veniam, quod in quibusdam autem sit eveniet, laudantium alias, sint nobis excepturi tempora sed atque harum officiis reiciendis unde maxime explicabo.</a></h5>
@@ -222,7 +228,9 @@
                 </div>
 
                 <div class="b-one-company__news-wrapp-item">
-                  <img src="img/temp/auto/6.png" alt="">
+                  <a href="one-item-news.html">
+                    <img src="img/temp/auto/6.png" alt="">
+                  </a>
                   <div class="b-one-company__news-wrapp-item-text">
                     <p class="b-one-company__news-wrapp-item-text-date text">12.10.2016</p>
                     <h5 data-clamp><a href="one-item-news.html">Новость 4</a></h5>
