--- a/www/flea-market.html
+++ b/www/flea-market.html
@@ -36,7 +36,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="js/jquery.dropList.1.0.0.js"></script>
-    <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
@@ -391,43 +391,59 @@
             
             <div class="block b-add-block__last">
               <h4>Последние просмотренные</h4>
-              <div class="b-ad__item item">
-                <div class="b-ad__item-img">
-                  <figure>
-                    <img src="img/temp/auto/6.jpg" alt="">
-                  </figure>
-                </div>
-                <div class="b-ad__item-info">
-                  <div class="b-ad__item-info-top">
-                    <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+              <div class="b-add-block__last-wrapp">
+                <div class="b-add-block__last-item item">
+                  <div class="b-add-block__last-item-img">
+                    <figure>
+                      <img src="img/temp/auto/6.jpg" alt="">
+                    </figure>
+                  </div>
+                  <div class="b-ad__item-info">
+                    <div class="b-ad__item-info-top">
+                      <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                    </div>
                   </div>
                 </div>
-              </div>
 
-              <div class="b-ad__item item">
-                <div class="b-ad__item-img">
-                  <figure>
-                    <img src="img/temp/auto/2.jpg" alt="">
-                  </figure>
-                </div>
-                <div class="b-ad__item-info">
-                  <div class="b-ad__item-info-top">
-                    <h5 data-clamp><a href="one-ad-page.html">Deleniti assumenda inventore mollitia. Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? </a></h5>
+                <div class="b-add-block__last-item item">
+                  <div class="b-add-block__last-item-img">
+                    <figure>
+                      <img src="img/temp/auto/2.jpg" alt="">
+                    </figure>
+                  </div>
+                  <div class="b-ad__item-info">
+                    <div class="b-ad__item-info-top">
+                      <h5 data-clamp><a href="one-ad-page.html">Deleniti assumenda inventore mollitia. Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? </a></h5>
+                    </div>
                   </div>
                 </div>
-              </div>
 
-              <div class="b-ad__item item">
-                <div class="b-ad__item-img">
-                  <figure>
-                    <img src="img/temp/auto/10.jpg" alt="">
-                  </figure>
-                </div>
-                <div class="b-ad__item-info">
-                  <div class="b-ad__item-info-top">
-                    <h5 data-clamp><a href="one-ad-page.html">Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                <div class="b-add-block__last-item item">
+                  <div class="b-add-block__last-item-img">
+                    <figure>
+                      <img src="img/temp/auto/8.jpg" alt="">
+                    </figure>
+                  </div>
+                  <div class="b-ad__item-info">
+                    <div class="b-ad__item-info-top">
+                      <h5 data-clamp><a href="one-ad-page.html">Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                    </div>
                   </div>
                 </div>
+
+                <div class="b-add-block__last-item item">
+                  <div class="b-add-block__last-item-img">
+                    <figure>
+                      <img src="img/temp/auto/10.jpg" alt="">
+                    </figure>
+                  </div>
+                  <div class="b-ad__item-info">
+                    <div class="b-ad__item-info-top">
+                      <h5 data-clamp><a href="one-ad-page.html">Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                    </div>
+                  </div>
+                </div>
+
               </div>
 
             </div>
