--- a/www/my-page.html
+++ b/www/my-page.html
@@ -38,7 +38,7 @@
     <script src="js/jquery.dropList.1.0.0.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
-    <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
@@ -143,14 +143,14 @@
             </div>
             
             <div class="block b-property redact-block">
-              <h3>Характеристики</h3>
+              <h3>Nissan GT-R</h3>
               <div class="b-property-wrapp">
             
               <div class="row">
                 <div class=col xs-6"">
             <!-- Основные характеристики -->
                   <h4>Общие характеристики</h4>
-                  <div class="b-property-string">
+<!--                   <div class="b-property-string">
                     <p class="text bold">Марка</p>
                     <p class="text">Nissan</p>
                   </div>
@@ -158,17 +158,17 @@
                   <div class="b-property-string">
                     <p class="text bold">Модель</p>
                     <p class="text">GT-R</p>
-                  </div>
+                  </div> -->
 
                   <div class="b-property-string">
                     <p class="text bold">Пробег</p>
                     <p class="text">50 000 тыс км</p>
                   </div>
 
-                  <div class="b-property-string">
+                  <!-- <div class="b-property-string">
                     <p class="text bold">Цвет</p>
                     <p class="text">Темно-краный</p>
-                  </div>
+                  </div> -->
 
                   <div class="b-property-string">
                     <p class="text bold">Тип трансмиссии</p>
@@ -182,16 +182,21 @@
 
                   <div class="b-property-string">
                     <p class="text bold">Расход по городу</p>
-                    <p class="text">11 л/км</p>
+                    <p class="text">11</p>
+                  </div>
+
+                  <div class="b-property-string">
+                    <p class="text bold">Смешанный расход, л/км</p>
+                    <p class="text">8</p>
                   </div>
 
                   <div class="b-property-string">
                     <p class="text bold">Расход по трассе, л/км</p>
-                    <p class="text">6 л/км</p>
+                    <p class="text">5</p>
                   </div>
                 </div>
 
-                <div class=col xs-6"">
+                <div class="col xs-6">
                 <!-- Замеры -->
                   <h4>Замеры</h4>
 
@@ -223,50 +228,52 @@
                 </div>
               </div>
 
+                <div class="b-property-block">
                 <!-- Доработки -->
-                <h4>Доработки</h4>
+                  <h4>Доработки</h4>
+                  <div class="b-property-string">
+                    <p class="text bold">Чип</p>
+                    <p class="text">FGTech Galletto 2 Master</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <p class="text bold">Чип</p>
-                  <p class="text">FGTech Galletto 2 Master</p>
+                  <div class="b-property-string">
+                    <p class="text bold">Выхлоп</p>
+                    <p class="text">Nissan Primera 1.8i-16V 05/02-07</p>
+                  </div>
+
+                  <div class="b-property-string">
+                    <p class="text bold">Впуск</p>
+                    <p class="text">CTS Turbo</p>
+                  </div>
+
+                  <div class="b-property-string">
+                    <p class="text bold">Акустика</p>
+                    <p class="text">Pioneer TS-A1733i</p>
+                  </div>
                 </div>
 
-                <div class="b-property-string">
-                  <p class="text bold">Выхлоп</p>
-                  <p class="text">Nissan Primera 1.8i-16V 05/02-07</p>
-                </div>
-
-                <div class="b-property-string">
-                  <p class="text bold">Впуск</p>
-                  <p class="text">CTS Turbo</p>
-                </div>
-
-                <div class="b-property-string">
-                  <p class="text bold">Акустика</p>
-                  <p class="text">Pioneer TS-A1733i</p>
-                </div>
-
+                <div class="b-property-block">
                 <!-- Планируемые доработки -->
-                <h4>Планируемые доработки</h4>
+                  <h4>Планируемые доработки</h4>
+                  <div class="b-property-string">
+                    <p class="text bold">Чип</p>
+                    <p class="text">FGTech Galletto 2 Master</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <p class="text bold">Чип</p>
-                  <p class="text">FGTech Galletto 2 Master</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text bold">Выхлоп</p>
+                    <p class="text">Nissan Primera 1.8i-16V 05/02-07</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <p class="text bold">Выхлоп</p>
-                  <p class="text">Nissan Primera 1.8i-16V 05/02-07</p>
-                </div>
+                  <div class="b-property-string">
+                    <p class="text bold">Впуск</p>
+                    <p class="text">CTS Turbo</p>
+                  </div>
 
-                <div class="b-property-string">
-                  <p class="text bold">Впуск</p>
-                  <p class="text">CTS Turbo</p>
-                </div>
-
-                <div class="b-property-string">
-                  <p class="text bold">Акустика</p>
-                  <p class="text">Pioneer TS-A1733i</p>
+                  <div class="b-property-string">
+                    <p class="text bold">Акустика</p>
+                    <p class="text">Pioneer TS-A1733i</p>
+                  </div>
                 </div>
 
               </div>
